actualizando ruta index

--- a/base64.html
+++ b/base64.html
@@ -139,7 +139,7 @@
         <h1><img src="resources/icon_multiconversor.svg" alt="Icono" class="header-icon" >
             Multiconversor</h1>
         <nav class="header-nav">
-            <a href="json_v2.html" data-format="json">JSON</a>
+            <a href="index.html" data-format="json">JSON</a>
             <a href="xml_v2.html" data-format="xml">XML</a>
             <a href="compare_v2.html" >Text Compare</a>
             <a href="base64.html" >Base 64</a>
